<resources>
    <string name="app_name">星梦缘</string>
    <string name="star_btn_text">星座</string>
    <string name="partner_btn_text">配对</string>
    <string name="luck_btn_text">运势</string>
    <string name="me_btn_text">我的</string>

    <string name="male">男生：</string>
    <string name="female">女生：</string>
    <string name="partner_tips">分别选择您的星座和对方的星座，点击配对分析即可。</string>
    <string name="partner_prize_btn_text">每日抽奖</string>
    <string name="partner_analysis_btn_text">开始配对分析</string>

    <string name="me_about">关于应用</string>
    <string name="me_function">功能介绍</string>
    <string name="me_update">更新日志</string>
    <string name="me_feedback">反馈问题</string>
</resources>